--- a/vignettes/LFQ_parse_qc_protein_inference.Rmd
+++ b/vignettes/LFQ_parse_qc_protein_inference.Rmd
@@ -21,13 +21,13 @@ knitr::opts_chunk$set(
 library(UniProt.ws)
 library(camprotR)
 library(MSnbase)
-library(ggplot2)
-library(tidyr)
-library(dplyr)
 library(naniar)
 library(gplots)
 library(biobroom)
 library(ggbeeswarm)
+library(ggplot2)
+library(tidyr)
+library(dplyr)
 ```
 
 # Input data
@@ -38,6 +38,7 @@ We start by reading in a file containing peptide-level output from Proteome Disc
 pep_data <- lfq_oops_rnase
 ```
 
+# Parse input data and remove contaminants 
 The first step is to remove contaminant proteins. These were defined using the cRAP database. Below, we parse the cRAP fasta to extract the IDs for the cRAP proteins, in both 'cRAP' format and Uniprot IDs for these proteins.
 ```{r}
 crap_fasta_inf <- system.file(
@@ -106,6 +107,7 @@ colnames(pep) <- paste(pep$condition,
                        sep='.')
 ```
 
+# QC peptides
 First of all, we want to inspect the peptide intensity distributions. We expect these to be approximately equal and any very low intensity sample would be a concern that would need to be further explored. Here, we can see that there is some clear variability, but no sample with very low intensity.
 
 ```{r, fig.height=3, fig.width=4, fig.fullwidth=TRUE, fig.cap="Peptide intensities"}
@@ -144,8 +146,8 @@ naniar::gg_miss_upset(missing_data,
 
 So in this case, we can see that the most common missing value patterns are missing in just RNase negative replicate 4, or missing in all the other samples, except this sample. This sample also had slightly lower overall peptide intensities and appears to be somewhat of an outlier. In this case, we will retain the sample.
 
-Finally, we can recode the abundances to binary (present/abscent) and plot as a heatmap (missing = black). Beyond the aforementioned observations regarding RNase negative replicate 4, there's no clear structure in the missing values. This is what we would expect for LFQ, where data is typically missing at random (MAR). There are methods to impute values MAR, but, providing what we are after is protein-level abundance, it is usually more appropriate to perform the protein inference using a method that can accomodate missing values.
-```{r, fig.height=4, fig.width=6, fig.fullwidth=TRUE, fig.cap="Presence/Abscence heatmap"}
+Finally, we can recode the abundances to binary (present/absent) and plot as a heatmap (missing = black). Beyond the aforementioned observations regarding RNase negative replicate 4, there's no clear structure in the missing values. This is what we would expect for LFQ, where data is typically missing at random (MAR). There are methods to impute values MAR, but, providing what we are after is protein-level abundance, it is usually more appropriate to perform the protein inference using a method that can accomodate missing values.
+```{r, fig.height=4, fig.width=6, fig.fullwidth=TRUE, fig.cap="Presence/Absence heatmap"}
 missing_data[!is.na(missing_data)] <- 1
 missing_data[is.na(missing_data)] <- 0
 
@@ -161,7 +163,7 @@ gplots::heatmap.2(as.matrix(missing_data),
                   cexCol=0.7 # Reduce the column name size
                   )
 ```
-
+# Normalise
 We have injected the same quantity of peptides for each sample, so it's reasonable to normalise the samples against one another. Here we will apply 'center-median' normalisation, which in `MSnbase::normalise` is called 'diff.median'. Since the peptide intensities are log-Gaussian distributed, we log(2)-transform them before performing the normalisation.
 ```{r, fig.height=3, fig.width=5, fig.fullwidth=TRUE, fig.cap="Protein intensities post-normalisation"}
 
@@ -171,7 +173,8 @@ pep_norm %>% plot_quant(method='density')
 
 ```
 
-Before we can perform the protein inference, we need to exclude peptides with too many missing values. Here, peptides with more than 5/8 missing values are discarded, using `MSnbase::filterNA`. We also need to remove proteins without at least two peptides. We will use `camprotR::restrict_features_per_protein` which will replace quantification values with NA if the sample does not have two quantified peptides for a given protein. Note that this means we have to repeat the filtering process since we are adding missing values.
+# Summarising to protein-level abundance
+Before we can summarise to protein-level abundances, we need to exclude peptides with too many missing values. Here, peptides with more than 5/8 missing values are discarded, using `MSnbase::filterNA`. We also need to remove proteins without at least two peptides. We will use `camprotR::restrict_features_per_protein` which will replace quantification values with NA if the sample does not have two quantified peptides for a given protein. Note that this means we have to repeat the filtering process since we are adding missing values.
 
 ```{r}
 pep_restricted <- pep_norm %>%
@@ -231,7 +234,9 @@ naniar::gg_miss_upset(data.frame(exprs(prot_robust)),
 
 We have now obtained protein-level abundances from our LFQ data. This is our recommended procedure for summarising from peptide to protein level abundances. 
 
-However, there are other algorithms that are currently applied. For example MaxLFQ[@http://zotero.org/users/5634351/items/87YIDK69], which is implemented within MaxQuant, but also available via the maxLFQ function in the iq package in R. 
+# Alternatives for summarising to protein-level abundance - MaxLFQ
+
+Although we recommend using the 'robust' summarisation, there are other algorithms that are commonly applied. For example MaxLFQ[@http://zotero.org/users/5634351/items/87YIDK69], which is implemented within MaxQuant, but also available via the maxLFQ function in the iq package in R. 
 ```{r}
 
 
@@ -281,7 +286,7 @@ prot_maxlfq <- MSnSet(exprs=maxlfq.e,
 rownames(prot_maxlfq) <- maxlfq_estimates$Master.Protein.Accessions
 ```
 
-We can now compare the protein inferences.
+We can now compare the protein-level abundance estimates.
 ```{r, warning=FALSE, fig.height=3, fig.width=5, fig.fullwidth=TRUE, fig.cap="Comparison of protein inference methods"}
 # Define a function to extract the protein abundances in long form and
 # add a column annotating the method
@@ -307,7 +312,7 @@ compare_protein_abundances %>%
 There is a very good overall correlation. Let's inspect a few proteins with the largest differences between the two approaches to see what's going on for the edge cases.
 
 ```{r}
-# Identify proteins with largest difference between the protein inference methods
+# Identify proteins with largest difference between the protein summarisation methods
 proteins_of_interest <- compare_protein_abundances %>%
   pivot_wider(names_from=method, values_from=value) %>%
   mutate(diff=MaxLFQ-Robust) %>%
@@ -318,7 +323,7 @@ proteins_of_interest <- compare_protein_abundances %>%
 
 ```
 
-Below we define a function to plot the peptide abundances and protein inferences for the two methods for a single protein. We can ignore the details since it's the plots themselves we are interested in.
+Below we define a function to plot the peptide and protein abundances for the two methods for a single protein. We can ignore the details since it's the plots themselves we are interested in.
 ```{r}
 
 plot_pep_and_protein <- function(protein_of_interest){
@@ -357,31 +362,11 @@ Looking at these examples, we can see that MaxLFQ is often estimating slightly h
 
 We have now processed our peptide-level LFQ abundances and obtained protein-level abundances, from which we can perform our downstream analyses.
 
-For instance, we can perform a PCA to assess how the sources of variance align with the experimental conditions. Here, we see that the major source of variance does not align with the experimental condition (RNase +/-) but PC2 does. RNase negative replicate 4 does not appear to be a clear outlier, justifying the decision to retain this sample.
-```{r, fig.height=4, fig.width=5, fig.fullwidth=TRUE, fig.cap="PCA protein abundances"}
-pca_res <- prot_robust %>% filterNA() %>% exprs() %>% prcomp(center=TRUE)
-variance_per_pca <- pca_res$sdev^2/sum(pca_res$sdev^2)
+# Alternative normalisation - Using reference proteins
 
-p <- pca_res$rotation %>%
-  data.frame() %>%
-  merge(pData(prot_robust), by='row.names') %>%
-  separate(condition, into=c(NA, 'RNase')) %>%
-  ggplot(aes(PC1, PC2, shape=factor(replicate), fill=RNase)) +
-  geom_point(size=4) +
-  scale_shape_manual(values=21:24, name='Replicate') +
-  scale_fill_manual(values=get_cat_palette(4)[3:4], name='RNase') +
-  guides(fill = guide_legend(override.aes = list(pch = 21))) +
-  xlab(sprintf('PC1 (%s %% of variance)', 100*round(variance_per_pca[[1]], 4))) +
-  ylab(sprintf('PC2 (%s %% of variance)', 100*round(variance_per_pca[[2]], 4))) +
-  theme_camprot(border=FALSE, base_size=15, base_family='sans')
+Finally, we consider an alternative normalisation approach where we have a strong prior expectation about the abundance of a subset of proteins. Our data is from an RNase +/- OOPS experiment. Since OOPS is known to enrich glycoproteins at the interface, we can use these proteins as an internal set of 'housekeeping' proteins which we expect to have no difference in abundance between RNase +/-.
 
-print(p)
-```
-
-
-Finally, we consider an alternative normalisation approach. Our data is from an RNase +/- OOPS experiment. Since OOPS is known to enrich glycoproteins at the interface, we can use these proteins as an internal set of 'housekeeping' proteins which we expect to have no difference in abundance between RNase +/-.
-
-First, we need to calculate the RNase +/- ratios, since this is the value we can normalise.
+First, we need to calculate the RNase +/- ratios, since this is the value we want to normalise. In other applications, you may wish to normalise the abundance estimates for each sample, rather than the ratio between samples.
 ```{r}
 ratios <- exprs(prot_robust[,pData(prot_robust)$condition=='RNase_neg']) - exprs(prot_robust[,pData(prot_robust)$condition=='RNase_pos'])
 
@@ -389,7 +374,6 @@ prot_ratios <- MSnSet(exprs=ratios,
                       fData=fData(prot_robust),
                       pData=(pData(prot_robust) %>% filter(condition=='RNase_neg')))
 ```
-
 
 
 Next, we need annotations regarding which proteins are glycoproteins and GO-annotated RBPs. [Once a notebook has been added to cover GO annotations, reference to that here to avoid repeating explanations about why we want to expand the set of GO anntotations]
@@ -445,6 +429,7 @@ glycoproteins <- res %>%
 
 ```
  
+Add feature columns describing the glycoprotein and GO-RBP status of the proteins.
 ```{r}
 fData(prot_ratios) <- fData(prot_ratios) %>%
   mutate(glycoprotein=rownames(prot_ratios) %in% glycoproteins$UNIPROTKB) %>%
@@ -459,8 +444,8 @@ fData(prot_ratios) <- fData(prot_ratios) %>%
   
 ```
 
-ESTIMATE CV ACROSS REPLICATES AND TEST BEFORE AND AFTER NORMALISTION
-```{r, fig.width=8}
+Below, we define a function to plot the ratios for each functional sub-type of proteins and summarise the number of GO-annotated RBPs that have a log2 RNase -/+ ratio < -1.
+```{r}
 plot_ratios <- function(obj){
  to_plot <- merge(exprs(obj),
       fData(obj)[,'glyco_rbp',drop=FALSE],
@@ -476,39 +461,51 @@ plot_ratios <- function(obj){
    pivot_wider(names_from=neg_ratio, values_from=n) %>%
    mutate(`TRUE`=replace_na(`TRUE`, 0)) %>%
    mutate(perc_negative=100*`TRUE`/(`TRUE`+`FALSE`)) %>%
+   select(replicate, perc_negative) %>%
    print()
  
-  to_plot %>% ggplot(aes(replicate, ratio, colour=factor(glyco_rbp))) +
-  geom_quasirandom(dodge.width=2/3, size=2/3) +
-  theme_camprot(border=FALSE, base_family='sans') +
-  scale_colour_manual(values=c(get_cat_palette(3), 'black'), name='') +
-  xlab('Replicate') +
-  ylab('RNase -/+ ratio') 
+  p <- to_plot %>% ggplot(aes(replicate, ratio, colour=factor(glyco_rbp))) +
+    geom_quasirandom(dodge.width=2/3, size=2/3) +
+    theme_camprot(border=FALSE, base_family='sans') +
+    scale_colour_manual(values=c(get_cat_palette(3), 'black'), name='') +
+    geom_hline(yintercept=0, linetype=2, colour='grey') +
+    xlab('Replicate') +
+    ylab('RNase -/+ ratio') 
+  
+  print(p)
+  
+  invisible(to_plot)
 }
 
+```
 
+How do the ratios look pre-normalisation...
+
+```{r, fig.width=8}
 plot_ratios(prot_ratios)
-
 ```
-Many GO-annotated RBPs with negative log RNase -/+ ratios (2-13%)
 
+OK, so the glycoproteins are not centered at zero and many GO-annotated RBPs with negative log RNase -/+ ratios (2-13%).
+
+Below, we perform the center median normalisation to the set of reference proteins (here, the glycoproteins). 
 ```{r}
-prot_ratios[fData(prot_ratios)$glyco_rbp=='Glycoprotein',] %>% fData()
 
-prot_ratios2 <- prot_ratios
-exprs(prot_ratios2) <- 2^exprs(prot_ratios2)
-glycoprotein_medians <- prot_ratios2[fData(prot_ratios2)$glyco_rbp=='Glycoprotein',] %>% camprotR::get_medians()
-glycoprotein_medians
-glycoprotein_medians/mean(glycoprotein_medians)
-prot_ratios_norm <- camprotR::center_normalise_to_ref(prot_ratios2, glycoprotein_medians)
+glycoprotein_medians <- prot_ratios[fData(prot_ratios)$glyco_rbp=='Glycoprotein',] %>% camprotR::get_medians()
 
-offset <- median(exprs(prot_ratios_norm[fData(prot_ratios_norm)$glyco_rbp=='Glycoprotein',]), na.rm=TRUE)
-exprs(prot_ratios_norm) <- exprs(prot_ratios_norm)/offset
+prot_ratios_norm <- camprotR::center_normalise_to_ref(prot_ratios,
+                                                      glycoprotein_medians,
+                                                      center_to_zero=TRUE, # We want to center the glycoproteins around zero
+                                                      on_log_scale=TRUE # The quantifications are on a log scale (log2 ratios)
+                                                      )
+
+
 ```
 
-```{r}
-plot_ratios(log(prot_ratios_norm, base=2))
+And plot the ratios post-normalisation.
+```{r, fig.width=8}
+plot_ratios(prot_ratios_norm)
 ```
+
 Now, the median log2 RNase -/+ ratio for glycoproteins is zero for all replicates and we have far fewer GO-annotated RBPs with negative log RNase -/+ ratios (0-1%).
 
 # Session info {.unnumbered}
